@@ -15,37 +15,23 @@ def discover_package(package_dir, package_name=None):
     items = defaultdict(Group)
 
     for match in _find_po_files(package_dir, package_name):
-        group = items[match[u'domain']]
+        group = items[(match[u'locales'], match['domain'], match['package'])]
         group[u'languages'][match[u'language']] = unicode(
             match[u'relative_path'])
 
-        if group['locales'] is None:
-            group['locales'] = match['locales']
-        if group['locales'] != match['locales']:
-            raise ValueError((
-                    'Unexpected locales directory %s for file %s; '
-                    'expected locales directory to be %s') % (
-                    match['locales'], match['absolute_path'],
-                    group['locales']))
+        group[u'locales'] = match[u'locales']
+        group[u'domain'] = match['domain']
+        group[u'package'] = match['package']
 
     for match in _find_pot_files(package_dir, package_name):
-        group = items[match[u'domain']]
+        group = items[(match[u'locales'], match['domain'], match['package'])]
         group[u'pot'] = unicode(match[u'relative_path'])
         group[u'manual'] = match[u'manual']
         group[u'content'] = match[u'content']
 
-        if group['locales'] is None:
-            group['locales'] = match['locales']
-        if group['locales'] != match['locales']:
-            raise ValueError((
-                    'Unexpected locales directory %s for file %s; '
-                    'expected locales directory to be %s') % (
-                    match['locales'], match['absolute_path'],
-                    group['locales']))
-
-    for domain, value in items.items():
-        value[u'package'] = package_name
-        value[u'domain'] = domain
+        group[u'locales'] = match[u'locales']
+        group[u'domain'] = match['domain']
+        group[u'package'] = match['package']
 
     return items.values()
 
